{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 163,
  "lineage": "c90b45e4-efaa-a8d0-d5fd-e97161cd5dfb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:061972691516:subnet/subnet-a0c292e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-a0c292e6",
            "map_public_ip_on_launch": true,
            "owner_id": "061972691516",
            "tags": {
              "Name": "DistFunSimple",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07756265"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:061972691516:subnet/subnet-38cadc5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-38cadc5a",
            "map_public_ip_on_launch": true,
            "owner_id": "061972691516",
            "tags": {
              "Name": "DistFunSimple",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07756265"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:061972691516:vpc/vpc-07756265",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-c6e5f2a4",
            "default_route_table_id": "rtb-5d9a8d3f",
            "default_security_group_id": "sg-edf2e18f",
            "dhcp_options_id": "dopt-a8c3cbca",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07756265",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-5d9a8d3f",
            "owner_id": "061972691516"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "front_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:061972691516:loadbalancer/front-web",
            "availability_zones": [
              "us-west-1b",
              "us-west-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "front-web-135388393.us-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:4000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "front-web",
            "idle_timeout": 60,
            "instances": [
              "i-027123beaefbb7b7b",
              "i-044c974eb5db6369d",
              "i-066f265a179e6c8de"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 4000,
                "instance_protocol": "tcp",
                "lb_port": 80,
                "lb_protocol": "tcp"
              }
            ],
            "name": "front-web",
            "security_groups": [
              "sg-0497f51f4de417c09"
            ],
            "source_security_group": "061972691516/distfun-simple-tf",
            "source_security_group_id": "sg-0497f51f4de417c09",
            "subnets": [
              "subnet-38cadc5a",
              "subnet-a0c292e6"
            ],
            "tags": {
              "Name": "DistFunSimple",
              "Terraform": "true"
            },
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_default_subnet.default_az1",
            "aws_default_subnet.default_az2",
            "aws_instance.web",
            "aws_instance.web__az_1c",
            "aws_key_pair.my_key",
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06fcc1f0bc2c8943f",
            "arn": "arn:aws:ec2:us-west-1:061972691516:instance/i-027123beaefbb7b7b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-027123beaefbb7b7b",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cd24d6c9afb7e876",
            "private_dns": "ip-172-31-7-74.us-west-1.compute.internal",
            "private_ip": "172.31.7.74",
            "public_dns": "ec2-54-183-122-240.us-west-1.compute.amazonaws.com",
            "public_ip": "54.183.122.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cf70a94c786915a0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "distfun-simple-tf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a0c292e6",
            "tags": {
              "Name": "DistFunSimple",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0497f51f4de417c09"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06fcc1f0bc2c8943f",
            "arn": "arn:aws:ec2:us-west-1:061972691516:instance/i-066f265a179e6c8de",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066f265a179e6c8de",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d91442ffcaf12c8a",
            "private_dns": "ip-172-31-3-73.us-west-1.compute.internal",
            "private_ip": "172.31.3.73",
            "public_dns": "ec2-3-101-15-158.us-west-1.compute.amazonaws.com",
            "public_ip": "3.101.15.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0205f059709c44f04",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "distfun-simple-tf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a0c292e6",
            "tags": {
              "Name": "DistFunSimple",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0497f51f4de417c09"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web__az_1c",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06fcc1f0bc2c8943f",
            "arn": "arn:aws:ec2:us-west-1:061972691516:instance/i-044c974eb5db6369d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044c974eb5db6369d",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-076b0d6a7cad77a76",
            "private_dns": "ip-172-31-31-104.us-west-1.compute.internal",
            "private_ip": "172.31.31.104",
            "public_dns": "ec2-3-101-31-231.us-west-1.compute.amazonaws.com",
            "public_ip": "3.101.31.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-082fe5e577ea40957",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "distfun-simple-tf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-38cadc5a",
            "tags": {
              "Name": "DistFunSimple",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0497f51f4de417c09"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:061972691516:loadbalancer/app/front-web/589259621128dc01",
            "arn_suffix": "app/front-web/589259621128dc01",
            "dns_name": "front-web-1785523146.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:061972691516:loadbalancer/app/front-web/589259621128dc01",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front-web",
            "security_groups": [
              "sg-0497f51f4de417c09"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-38cadc5a"
              },
              {
                "subnet_id": "subnet-a0c292e6"
              }
            ],
            "subnets": [
              "subnet-38cadc5a",
              "subnet-a0c292e6"
            ],
            "vpc_id": "vpc-07756265",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_default_subnet.default_az1",
            "aws_default_subnet.default_az2",
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:061972691516:listener/app/front-web/589259621128dc01/715bf6499b31a8c1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:061972691516:targetgroup/front-web-tg/bebec8bfe8233a5e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:061972691516:listener/app/front-web/589259621128dc01/715bf6499b31a8c1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:061972691516:loadbalancer/app/front-web/589259621128dc01",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_default_subnet.default_az1",
            "aws_default_subnet.default_az2",
            "aws_default_vpc.default",
            "aws_lb.front_web",
            "aws_lb_target_group.front_web",
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:061972691516:targetgroup/front-web-tg/bebec8bfe8233a5e",
            "arn_suffix": "targetgroup/front-web-tg/bebec8bfe8233a5e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:061972691516:targetgroup/front-web-tg/bebec8bfe8233a5e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "front-web-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07756265"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "front_web_i1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:061972691516:targetgroup/front-web-tg/bebec8bfe8233a5e-20200528121521134800000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:061972691516:targetgroup/front-web-tg/bebec8bfe8233a5e",
            "target_id": "i-027123beaefbb7b7b"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.web",
            "aws_lb_target_group.front_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "front_web_i2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:061972691516:targetgroup/front-web-tg/bebec8bfe8233a5e-20200528121521060300000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:061972691516:targetgroup/front-web-tg/bebec8bfe8233a5e",
            "target_id": "i-066f265a179e6c8de"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.web",
            "aws_lb_target_group.front_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "front_web_i3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:061972691516:targetgroup/front-web-tg/bebec8bfe8233a5e-20200528121521362400000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:061972691516:targetgroup/front-web-tg/bebec8bfe8233a5e",
            "target_id": "i-044c974eb5db6369d"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.web__az_1c",
            "aws_lb_target_group.front_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:061972691516:security-group/sg-0497f51f4de417c09",
            "description": "Allow all the network communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0497f51f4de417c09",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4369,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4369
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9155
              }
            ],
            "name": "distfun-simple-tf",
            "name_prefix": null,
            "owner_id": "061972691516",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DistFunSimple",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07756265"
          }
        }
      ]
    }
  ]
}